fix: Use NanoClock in RootErrorTracker instead of System.currentTimeMillis()